Fix microphone and camera comboboxes not aligned on the settings bubble.

When I previously refactored ContentSettingBubbleContents I put the
microphone and camera comboboxes on independent rows. However, if both
are present it looks weird for the two comboboxes not to be aligned, so
I've combined them into one dependent block to fix that.

Bug: 817326
Change-Id: I5a43c502067db62b5a0e83b370ce43ddf00de03d
Reviewed-on: https://chromium-review.googlesource.com/974566
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545273}
Former-commit-id: b3bce1884445c557656386eeaab81dfa6c8d43df