chrome/browser/ui/views/location_bar/content_setting_bubble_dialog_browsertest.cc
@@ -3,6 +3,7 @@
 // found in the LICENSE file.
 
 #include "base/memory/ptr_util.h"
+#include "base/strings/string_util.h"
 #include "base/strings/utf_string_conversions.h"
 #include "base/test/histogram_tester.h"
 #include "base/time/time.h"
@@ -36,8 +37,10 @@ class ContentSettingBubbleDialogTest : public DialogBrowserTest {
  public:
   ContentSettingBubbleDialogTest() {}
 
-  void ShowDialogBubble(ContentSettingsType content_type,
-                        ContentSettingImageModel::ImageType image_type);
+  void ApplyMediastreamSettings(bool mic_accessed, bool camera_accessed);
+  void ApplyContentSettingsForType(ContentSettingsType content_type);
+
+  void ShowDialogBubble(ContentSettingImageModel::ImageType image_type);
 
   void ShowUi(const std::string& name) override;
 
@@ -45,23 +48,28 @@ class ContentSettingBubbleDialogTest : public DialogBrowserTest {
   DISALLOW_COPY_AND_ASSIGN(ContentSettingBubbleDialogTest);
 };
 
-void ContentSettingBubbleDialogTest::ShowDialogBubble(
-    ContentSettingsType content_type,
-    ContentSettingImageModel::ImageType image_type) {
+void ContentSettingBubbleDialogTest::ApplyMediastreamSettings(
+    bool mic_accessed,
+    bool camera_accessed) {
+  const int mic_setting =
+      mic_accessed ? TabSpecificContentSettings::MICROPHONE_ACCESSED : 0;
+  const int camera_setting =
+      camera_accessed ? TabSpecificContentSettings::CAMERA_ACCESSED : 0;
+  TabSpecificContentSettings* content_settings =
+      TabSpecificContentSettings::FromWebContents(
+          browser()->tab_strip_model()->GetActiveWebContents());
+  content_settings->OnMediaStreamPermissionSet(
+      GURL::EmptyGURL(), mic_setting | camera_setting, std::string(),
+      std::string(), std::string(), std::string());
+}
+
+void ContentSettingBubbleDialogTest::ApplyContentSettingsForType(
+    ContentSettingsType content_type) {
   content::WebContents* web_contents =
       browser()->tab_strip_model()->GetActiveWebContents();
   TabSpecificContentSettings* content_settings =
       TabSpecificContentSettings::FromWebContents(web_contents);
   switch (content_type) {
-    case CONTENT_SETTINGS_TYPE_MEDIASTREAM_MIC:
-    case CONTENT_SETTINGS_TYPE_MEDIASTREAM_CAMERA:
-      content_settings->OnMediaStreamPermissionSet(
-          GURL::EmptyGURL(),
-          content_type == CONTENT_SETTINGS_TYPE_MEDIASTREAM_MIC
-              ? TabSpecificContentSettings::MICROPHONE_ACCESSED
-              : TabSpecificContentSettings::CAMERA_ACCESSED,
-          std::string(), std::string(), std::string(), std::string());
-      break;
     case CONTENT_SETTINGS_TYPE_GEOLOCATION:
       content_settings->OnGeolocationPermissionSet(GURL::EmptyGURL(), false);
       break;
@@ -97,6 +105,10 @@ void ContentSettingBubbleDialogTest::ShowDialogBubble(
       break;
   }
   browser()->window()->UpdateToolbar(web_contents);
+}
+
+void ContentSettingBubbleDialogTest::ShowDialogBubble(
+    ContentSettingImageModel::ImageType image_type) {
   LocationBarTesting* location_bar_testing =
       browser()->window()->GetLocationBar()->GetLocationBarForTesting();
 
@@ -111,6 +123,14 @@ void ContentSettingBubbleDialogTest::ShowDialogBubble(
 }
 
 void ContentSettingBubbleDialogTest::ShowUi(const std::string& name) {
+  if (base::StartsWith(name, "mediastream", base::CompareCase::SENSITIVE)) {
+    ApplyMediastreamSettings(
+        name == "mediastream_mic" || name == "mediastream_mic_and_camera",
+        name == "mediastream_camera" || name == "mediastream_mic_and_camera");
+    ShowDialogBubble(ImageType::MEDIASTREAM);
+    return;
+  }
+
   constexpr struct {
     const char* name;
     ContentSettingsType content_type;
@@ -127,10 +147,6 @@ void ContentSettingBubbleDialogTest::ShowUi(const std::string& name) {
        ImageType::PPAPI_BROKER},
       {"mixed_script", CONTENT_SETTINGS_TYPE_MIXEDSCRIPT,
        ImageType::MIXEDSCRIPT},
-      {"mediastream_mic", CONTENT_SETTINGS_TYPE_MEDIASTREAM_MIC,
-       ImageType::MEDIASTREAM},
-      {"mediastream_camera", CONTENT_SETTINGS_TYPE_MEDIASTREAM_CAMERA,
-       ImageType::MEDIASTREAM},
       {"protocol_handlers", CONTENT_SETTINGS_TYPE_PROTOCOL_HANDLERS,
        ImageType::PROTOCOL_HANDLERS},
       {"automatic_downloads", CONTENT_SETTINGS_TYPE_AUTOMATIC_DOWNLOADS,
@@ -140,8 +156,8 @@ void ContentSettingBubbleDialogTest::ShowUi(const std::string& name) {
   };
   for (auto content_settings : content_settings_values) {
     if (name == content_settings.name) {
-      ShowDialogBubble(content_settings.content_type,
-                       content_settings.image_type);
+      ApplyContentSettingsForType(content_settings.content_type);
+      ShowDialogBubble(content_settings.image_type);
       return;
     }
   }
@@ -188,6 +204,11 @@ IN_PROC_BROWSER_TEST_F(ContentSettingBubbleDialogTest,
 
 IN_PROC_BROWSER_TEST_F(ContentSettingBubbleDialogTest,
                        InvokeUi_mediastream_camera) {
+  ShowAndVerifyUi();
+}
+
+IN_PROC_BROWSER_TEST_F(ContentSettingBubbleDialogTest,
+                       InvokeUi_mediastream_mic_and_camera) {
   ShowAndVerifyUi();
 }
 
